fix scrollbarcolor

--- a/src/components/widgets/dashboard/categories/Categories.module.scss
+++ b/src/components/widgets/dashboard/categories/Categories.module.scss
@@ -48,13 +48,17 @@
     fill: white;
 }
 
-.categoriesListContainer {
 
+.categoriesListContainer {
+    scrollbar-color: $mainColor transparent;
 }
+
 
 .categoryItem {
     display: flex;
     justify-content: space-between;
+
+    padding-right: 10px;
 }
 
 .categoryNameContainer {
